--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "flickr-justified-gallery": "^2.1.2",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "^18.2.0",
